@@ -134,11 +134,11 @@
    "provides" : {
       "Pod::Weaver::Section::Badges" : {
          "file" : "lib/Pod/Weaver/Section/Badges.pm",
-         "version" : "0.0300"
+         "version" : "0.0301"
       },
       "Pod::Weaver::Section::Badges::Utils" : {
          "file" : "lib/Pod/Weaver/Section/Badges/Utils.pm",
-         "version" : "0.0300"
+         "version" : "0.0301"
       }
    },
    "release_status" : "stable",
@@ -153,6 +153,9 @@
          "web" : "https://github.com/Csson/p5-Pod-Weaver-Section-Badges"
       }
    },
-   "version" : "0.0300"
+   "version" : "0.0301",
+   "x_contributors" : [
+      "Mark Grimes <mgrimes@cpan.org>"
+   ]
 }
 
