@@ -46,7 +46,7 @@ my %WriteMakefileArgs = (
     "Test::More" => "0.96",
     "syntax" => 0
   },
-  "VERSION" => "0.0300",
+  "VERSION" => "0.0301",
   "test" => {
     "TESTS" => "t/*.t"
   }
